# bazel_ar_example

./: BUILD.bazel  README.md  WORKSPACE  a_one.cc  a_two.cc  b_one.cc  b_two.cc  rule.bzl
